# text2reward-Rag

./: .gitignore  CHANGES.patch  LICENSE  README.md  api_keys.json.example  env_config.py  evaluate.py  flake8-output.txt  key_manager.py  plot_training.py  pyproject.toml  requirements-dev.txt  requirements.txt  reward_archive.py  reward_components.py  reward_designer.py  reward_program.py  reward_sandbox.py  reward_wrapper.py  train.py  training_logger.py  trajectory_bank.py
.github/workflows/: ci.yml
docs/: debug-backlog.md  scripts.md  structure.md
docs/baselines/: phase0-pre-clip.json  phase4-post-clip-gates.json
examples/: README.md
scripts/: README.md  calibrate_smoke_gate.py
tests/: conftest.py  helpers.py  test_archive.py  test_archive_quality.py  test_behavior_regression.py  test_critical_fixes.py  test_curriculum.py  test_designer.py  test_evaluate_fixes.py  test_evaluation.py  test_evolution_robustness.py  test_evolution_system.py  test_fitness.py  test_fitness_v8.py  test_high_fixes.py  test_key_manager.py  test_low_fixes.py  test_medium_fixes.py  test_medium_fixes_21_27.py  test_reward_archive.py  test_reward_designer.py  test_reward_incentives.py  test_reward_program.py  test_reward_sandbox.py  test_reward_wrapper.py  test_sandbox.py  test_sandbox_unit.py  test_training.py  test_trajectory_bank.py  test_validation.py
tests/integration/: test_generation_pipeline.py
tests/safety/: test_malicious_rewards.py  test_security_fixes.py
txt2reward/: __init__.py
txt2reward/archive/: __init__.py  archive.py  critique.py  curriculum.py  fitness.py  (+2 more)
(+35 files in other folders)
